import "google/protobuf/descriptor.proto";

extend .google.protobuf.FieldOptions
{  
  optional string description = 50110;
  optional string example = 50111;
  
  // used in tes_moos_app.proto
  optional string moos_global = 50100;
    
}

